--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -7,8 +7,7 @@
 
 .container{
   max-width: 1120px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   height: 5rem;
   display: flex;
   align-items: center;
@@ -23,10 +22,11 @@
   text-align: center;
 
   li {
-    transition: color 0.2s;
+    transition: color 0.2s, font-weight 0.2s;
     
     &:hover {
       color: var(--base-color);
+      font-weight: bold;
     }
 
     & + li {
