--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,2 +1,97 @@
+.searchItem{
+  max-width: 1120px;
+  margin: 0 auto 3rem;
+  padding: 0 2rem;
+  height: 5rem;
+  background: var(--base-color);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  color: var(--text-color-light);
 
+  input {
+    margin-left: 2rem;
+    height: 3rem;
+    width: 100%;
+    border-radius: 8px;
+    border: none;
+    text-indent: 2rem;
+    color: var(--text-color);
+
+    &:focus{
+      outline: none;
+    }
+  }
+
+}
+
+.productList {
+  max-width: 1120px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  padding: 0 2rem; 
+
+  li {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border-radius: 4px;
+    padding: 20px;
+
+    img {
+      align-self: center;
+      max-width: 260px;
+      border-radius: 10px;
+    }
+
+    > strong {
+      font-size: 16px;
+      line-height: 20px;
+      color: var(--title-color);
+      margin-top: 5px;
+    }
+
+    > span {
+      font-size: 21px;
+      font-weight: bold;
+      margin: 5px 0 20px;
+    }
+
+    button { 
+      background: var(--base-color);
+      color: #fff;
+      border: 0;
+      border-radius: 4px;
+
+      display: flex;
+      align-items: center;
+
+      transition: filter 0.2s;
+
+      &:hover {
+        filter: brightness(1.1)
+      }
+
+      div {
+        display: flex;
+        align-items: center;
+        padding: 12px;
+        background: rgba(0, 0, 0, 0.1);
+
+        svg {
+          margin-right: 5px;
+        }
+      }
+
+      span {
+        flex: 1;
+        text-align: center;
+        font-weight: bold;
+      }
+    }
+  }
+
+}
 
