Inclusão de rotas dinâmicas p/ produtos

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -40,10 +40,15 @@
     border-radius: 4px;
     padding: 20px;
 
-    img {
+    a{
       align-self: center;
-      max-width: 260px;
-      border-radius: 10px;
+
+      img {
+        align-self: center;
+        max-width: 260px;
+        border-radius: 10px;
+      }
+
     }
 
     > strong {
