Atualização do carrinho com itens do cookies

--- a/src/pages/Cart/styles.module.scss
+++ b/src/pages/Cart/styles.module.scss
@@ -95,3 +95,17 @@
     }
   }
 }
+
+.total {
+  display: flex;
+  align-items: baseline;
+
+  span {
+    font-weight: bold;
+  }
+
+  strong {
+    font-size: 28px;
+    margin-left: 5px;
+  }
+}
