--- a/src/pages/Cart/styles.module.scss
+++ b/src/pages/Cart/styles.module.scss
@@ -1,3 +1,15 @@
+.cartTitle{
+  max-width: 1120px;
+  margin: 0 auto 3rem;
+  padding: 0 2rem;
+  height: 5rem;
+  background: var(--base-color);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  color: var(--text-color-light);
+}
+
 .container {
   max-width: 1120px;
   margin: 0 auto;
