--- a/src/pages/products/styles.module.scss
+++ b/src/pages/products/styles.module.scss
@@ -13,6 +13,8 @@
 
   img {
     margin-right: 2rem;
+    height: 100%;
+    border-radius: 10px;
   }
 
   h3 {
@@ -30,6 +32,7 @@
     font-size: 21px;
     font-weight: bold;
   }
+
 
   div {
     display: flex;
