--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -23,6 +23,7 @@
 
   li {
     transition: color 0.2s, font-weight 0.2s;
+
     
     &:hover {
       color: var(--base-color);
@@ -31,6 +32,14 @@
 
     & + li {
       margin-left: 2rem;
+    }
+
+    a {
+
+      &.active {
+        color: var(--base-color);
+        font-weight: bold;
+      }
     }
   }
 }
