Aplicação de responsividade

--- a/src/pages/cart/styles.module.scss
+++ b/src/pages/cart/styles.module.scss
@@ -123,3 +123,14 @@
     margin-left: 5px;
   }
 }
+
+@media (max-width: 580px) {
+  .container{
+    overflow-x: scroll;
+  }
+
+  .total {
+    margin-left: 1rem;
+  }
+
+}
