--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -110,3 +110,22 @@
     }
   }
 }
+
+@media (max-width: 980px) {
+  .productList {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 650px) {
+  .productList {
+    grid-template-columns:  1fr;
+  }
+
+  .searchItem{
+
+    input {
+      margin-left: 1rem;
+    }
+  }
+}
