--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,6 +1,6 @@
 .footer{
   background: var(--base-color);
-  padding: 4rem 0;
+  padding: 4rem 2rem;
   margin-top: 5rem;
 }
 
@@ -30,6 +30,9 @@
 
 .social {
   color: var(--text-color-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   a {
   
@@ -41,8 +44,18 @@
     & + a {
       margin-left: 2rem;
     }
-
-
   }
+}
 
+@media (max-width: 450px) {
+  .social {
+    flex-direction: column;
+    align-items: center;
+
+    a {
+      & + a {
+        margin-left: 0rem
+      }
+    }
+  }
 }
