Responsividade página de produtos e ajuste db

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -48,6 +48,9 @@
 }
 
 @media (max-width: 450px) {
+  .footer{
+    padding: 4rem 0.5rem;
+  }
   .social {
     flex-direction: column;
     align-items: center;
