--- a/src/pages/favorites/styles.module.scss
+++ b/src/pages/favorites/styles.module.scss
@@ -1,3 +1,7 @@
+.container{
+  min-height: 100vh;
+}
+
 .favoritesTitle{
   max-width: 1120px;
   margin: 0 auto 3rem;
@@ -12,7 +16,7 @@
 
 .productList {
   max-width: 1120px;
-  margin: 0 auto;
+  margin: 0 auto 5rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
