--- a/src/pages/cart/styles.module.scss
+++ b/src/pages/cart/styles.module.scss
@@ -15,7 +15,7 @@
 
 .container {
   max-width: 1120px;
-  margin: 0 auto;
+  margin: 0 auto 5rem;
   padding: 30px;
   background: #fff;
   border-radius: 4px;
