--- a/src/pages/products/styles.module.scss
+++ b/src/pages/products/styles.module.scss
@@ -39,6 +39,11 @@
   div {
     display: flex;
     flex-direction: column;
+
+    div {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   button { 
